# affect_aif

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  setup.py  start_research.sh
.claude/: CLAUDE.md  settings.json
affect_aif/: README.md  __init__.py
agent/: __init__.py  affective.py  base.py  lesioned.py
aif/: __init__.py  agent.py  efe.py  inference.py  learning.py  maths.py  policies.py  runtime.py  utils.py
analysis/: AGENTS.md  __init__.py  configured.py  figure_style.py  hypotheses.py  interference.py  metrics.py  model_comparison.py  plots.py  statistics.py  visualization.py
archive/: README.md
benchmark/: __init__.py  aif_policy.py  backend.py  baselines.py  benchmark_config.py  benchmark_runner.py  cogames_adapter.py  common_metrics.py  comparison.py  compat.py  cvc_affect_policy.py  cvc_beta.py  cvc_local_backend.py  cvc_local_worker.py  cvc_policy.py  cvc_scoring_policy.py  interaction_tracker.py  observation_encoder.py  scenarios.py  scripted_partners.py  toy_gridworld_backend.py  trust_backend.py
benchmarks/: __init__.py  trust_backend.py
cli/: __init__.py  common.py
cloud/: _env.sh  _provider.sh  menu.sh
conductor/: INBOX.md  MISSION.md  STATE.md  USAGE.md  conductor.service  conductor.sh  launch_3am.sh
configs/: AGENTS.md  README.md  benchmark_betrayal.json  benchmark_betrayal_comprehensive.json  benchmark_betrayal_fair.json  benchmark_comprehensive.json  benchmark_cvc_affect_smoke.json  benchmark_cvc_comparison.json  benchmark_cvc_full.json  benchmark_cvc_local_smoke.json  benchmark_cvc_scoring_smoke.json  benchmark_default.json  benchmark_full.json  benchmark_noisy.json  benchmark_resource_sharing.json  betrayal_stress.json  cautious_prior.json  clinical_betrayal.json  clinical_phenotypes.json  default.json  figure_clinical.json  figure_data.json  graded_betrayal_no_mod_full.json  graded_betrayal_precision_mod_full.json  graded_betrayal_precision_mod_smoke.json  graded_betrayal_stress.json  graded_trust_factorial.json  h1_depth_affect_factorial.json  h2_lesion_dissociation.json  h4_betrayal_recovery.json  h5_partner_selection.json  horizon_sweep.json  multifocal_assortative_choice.json  multifocal_homogeneous_affective.json  sensitivity_affect_params.json  shallow_affect_confirm.json  smoke_test.json  variant_a.json  variant_b.json  variant_c.json  (+1 more)
docs/: AGENTS.md  README.md  action-dependent-partner-design.md  agent_model_spec.md  benchmarking_integration.md  cli.md  experiment.md  future.md  future_work.md  hesp-beta-spec.md  implementation.md  long_term_plan.md  reproduce.md  results_tracking.md  theory.md
env/: graded_trust_game.py  partner.py  trust_game.py
experiment/: __init__.py  batch.py  calibration.py  conditions.py  config.py  constants.py  factory.py  joint_resolution.py  logger.py  multi_focal_config.py  multi_focal_runner.py  persistence.py  runner.py  tasks.py
experiments/: AGENTS.md  __init__.py
notebooks/: 01_single_agent_demo.ipynb  02_affective_agent_demo.ipynb  03_full_experiment.ipynb  04_apashea_trust_spec.ipynb  README.md  demo.ipynb  reproduce.ipynb
results/: AGENTS.md  README.md  benchmark_summary.md
scripts/: AGENTS.md  README.md  analyze_benchmark.py  analyze_benchmark_paper.py  analyze_clinical_results.py  run_analysis.py  (+15 more)
(+801 files in other folders)
