[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affect_aif"
version = "0.1.0"
description = "pymdp-backed active-inference trust-game simulations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.28",
  "inferactively-pymdp==1.0.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.0",
  "pillow>=10.0",
  "scipy>=1.11",
  "seaborn>=0.13",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tasks*", "experiments*", "analysis*", "benchmarks*", "cli*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["archive", "notebooks"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = [
  "cli",
  "experiments/trust/config.py",
  "experiments/trust/spec.py",
  "analysis/configured.py",
  "analysis/core/loading.py",
  "analysis/core/plots.py",
  "analysis/core/statistics.py",
  "analysis/core/summaries.py",
  "analysis/core/windows.py",
  "scripts/analysis/analyze.py",
  "scripts/analysis/model_comparison.py",
  "scripts/analysis/visualize.py",
  "scripts/experiment/preliminary.py",
  "scripts/experiment/run.py",
]
exclude = []
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
